# EMeeting

./: CMakeLists.txt  Makefile  README.md
data/: audio-sender.sh  badrate-sender.sh  mic-sender.sh  rx.sh  rxtx.sh
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  DataBuffer.cpp  DataBuffer.h  EMClient.cpp  EMClient.h  main.cpp
src/Server/: CMakeLists.txt  ClientObject.cpp  ClientObject.h  EMServer.cpp  EMServer.h  Mixer.cpp  Mixer.h  TcpConnection.cpp  TcpConnection.h  main.cpp
src/System/: AbstractServer.cpp  AbstractServer.h  ArgsManager.cpp  ArgsManager.h  CMakeLists.txt  DataBuffer.cpp  DataBuffer.h  Error.cpp  Error.h  Logging.cpp  Logging.h  Messages.cpp  Messages.h  Mixer.cpp  Mixer.h  SignalHandler.cpp  SignalHandler.h  Strings.h  TcpConnection.cpp  TcpConnection.h  Utils.cpp  Utils.h
